0512 modify the onos log